first layer written. module system seemingly working. started LayerStack. lot of work to do; lot of testing to do

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </tr></thead>
 <tfoot><tr class="summary summary-quality-1">
 <th class="summary summary-filename">Total</th>
-<th class="summary summary-precision">19.40% imprecise</th>
-<th class="summary summary-lines">299 LOC</th>
+<th class="summary summary-precision">17.36% imprecise</th>
+<th class="summary summary-lines">363 LOC</th>
 </tr></tfoot>
 <tbody>
 <tr class="summary summary-quality-0">
@@ -52,6 +52,16 @@
 <td class="summary summary-filename"><a href="html/Framework/Generator/modules/erdos_renyi.py.html">Framework.Generator.modules.erdos_renyi</a></td>
 <td class="summary summary-precision">15.63% imprecise</td>
 <td class="summary summary-lines">32 LOC</td>
+</tr>
+<tr class="summary summary-quality-0">
+<td class="summary summary-filename"><a href="html/Framework/Network/__init__.py.html">Framework.Network</a></td>
+<td class="summary summary-precision">0.00% imprecise</td>
+<td class="summary summary-lines">1 LOC</td>
+</tr>
+<tr class="summary summary-quality-1">
+<td class="summary summary-filename"><a href="html/Framework/Network/AbstractLayer.py.html">Framework.Network.AbstractLayer</a></td>
+<td class="summary summary-precision">7.94% imprecise</td>
+<td class="summary summary-lines">63 LOC</td>
 </tr>
 <tr class="summary summary-quality-0">
 <td class="summary summary-filename"><a href="html/Framework/Simulator/__init__.py.html">Framework.Simulator</a></td>
